MyFaces Release Notes
=====================

----------------------------------------------------------------------
Changes in Release 1.0.7 beta

----------------------------------------------------------------------
Changes in Release 1.0.6 beta
* switch to apache license
* new JspTilesViewHandler for flawless Tiles support
* RFE #975649 Enhance HtmlTabbedPaneRenderer (rendered attribute for TabbedPane component)
* RFE #990814 dataList component ignores styleClass attribute
* bug #1004867 h:message has duplicate attributes
* bug #1004896 h:dataTable id attribute not rendered
* bug #995085 graphicImage ignores value attribute
* bug #992668 selectOneMenu doesn't restore the bean value if it's a primitive
* bug #992628 StateManager.SerializedView is not static
* bug #992629 FacesContext.getRenderKit() unimplemented
* bug #992452 HtmlTree doesn't properly restore state
* bug #991740 HtmlTreeRender icon URL conversion
* bug #991234 command links not working with javascript disabled
* bug #990395 myfaces.jar has bad taglib descriptor
* bug #990302 Navigation-Rule redirect
* bug #985274 f:view locale does not always work
* bug #978654 Input hidden value of null being converted to zero
* bug #979038 jsCookMenu component does not create dummyForm
* bug #979039 default-values for ConvertNumberTag and ConvertDateTimeTag
* changed build.xml - now myfaces-components are shipped via bin-distribution
* bug #985217 decorator-factory not supported
* splitting jar-files (myfaces.jar, myfaces-jsf-api.jar, myfaces-components.jar)
* new EXPERIMENTAL feature to detect JavaScript support of a client browser

----------------------------------------------------------------------
Changes in Release 1.0.5 beta
* new faces configurator
* new validator (Regular Expressions)
* new validator (Equal)
* new component (rssticker)
* new component (dataScroller)
* new component (jscookMenu)
* modified renderers to comply with version 1.1 of the spec